fixed scrollbar at the bottom

--- a/src/components/User/styles.css
+++ b/src/components/User/styles.css
@@ -1,8 +1,13 @@
 .Empty-PR {
-    border: 1px solid black;
-    margin-top: 1em;
-    border-radius: 5px;
-    font-size: 1.2em;
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
+  border: 1px solid black;
+  margin-top: 1em;
+  border-radius: 5px;
+  font-size: 1.2em;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+}
+
+.row {
+  margin-right: 0px;
+  margin-left: 0px;
 }
